# ST_ETL_py

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
config/: .env.example  config.json
src/: __init__.py  pipeline.py
src/extract/: __init__.py  api_extractor.py  base.py  csv_extractor.py
src/load/: __init__.py  base.py  csv_loader.py  database_loader.py
src/transform/: __init__.py  base.py
src/utils/: __init__.py  config_loader.py  logging_config.py
tests/integration/: test_pipeline.py
tests/unit/: test_extractors.py  test_transformers.py
